Fri Jun 15 17:33:46 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html, htdoc/cf_by{name,prog}.html: Added entry for
	accents_db attribute for htfuzzy and htsearch. Mentioned accents
	algorithm in description of search_algorithm. Noted effect of
	locale setting on floating point numbers in search_algorithm
	and locale descriptions.

Fri Jun 15 16:47:09 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Accents.{h,cc}, htfuzzy/Fuzzy.c (getFuzzyByName),
	htfuzzy/htfuzzy.cc (main, usage), htfuzzy/Makefile.in: Added
	latest version of Robert Marchand's accents fuzzy match algorithm.
	* htcommon/defaults.cc: Added accents_db attribute for this.
	* htsearch/htsearch.cc: Fixed parsing of search_algorithm not to
	use comma as separator, because it may be needed as decimal point
	in some locales.

Fri Jun 15 16:30:19 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Endings.cc (getWords): Undid change introduced in 3.1.3,
	in part. It now gets permutations of word whether or not it has
	a root, but it also gets permutations of one or more roots that
	the word has, based on a suggestion by Alexander Lebedev.
	* htfuzzy/EndingsDB.cc (createRoot): Fixed to handle words that have
	more than one root.
	* installdir/english.0: Removed P flag from wit, like and high, so
	they're not treated as roots of witness, likeness and highness, which
	are already in the dictionary.

Thu Jun  7 17:09:46 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc: Add new attribute use_doc_date to use
	document meta information for the DocTime() field.
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Document it.
	* htdig/HTML.cc(do_tag): Call Retriever::got_time if use_doc_date
	is set and we run across a META date tag.
	* htdig/Retriever.h, htdig/Retriver.cc: Add new got_date
	function. When called, sets the DocTime field of the DocumentRef
	after parsing is completed. Currently assumes ISO 8601 format for