@@ -10,7 +10,7 @@
 	  htfuzzy
 	</h1>
 	<p>
-	  ht://Dig Copyright &copy; 1995-2000 The ht://Dig Group<br>
+	  ht://Dig Copyright &copy; 1995-2001 <a href="THANKS.html">The ht://Dig Group</a><br>
 	  Please see the file <a href="COPYING">COPYING</a> for
 	  license information.
 	</p>
@@ -97,6 +97,16 @@
 			matches than the soundex algorithm.
 		  </dd>
 		  <dt>
+			<strong>accents</strong>
+		  </dt>
+		  <dd>
+			Creates an accents key database. This algorithm will
+			map all accented letters to their unaccented
+			counterparts, so that a search for the unaccented
+			word will yield all variations of this word with
+			accents.
+		  </dd>
+		  <dt>
 			<strong>endings</strong>
 		  </dt>
 		  <dd>
@@ -159,11 +169,8 @@
 	  </dd>
 	</dl>
 	<hr size="4" noshade>
-	<address>
-	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
-	</address>
 
-Last modified: $Date: 2000/02/17 22:05:21 $
+	Last modified: $Date: 2001/06/15 22:42:28 $
 
   </body>
 </html>
