@@ -1,5 +1,6 @@
-Fri Jun 15 17:33:46 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+Fri Jun 15 17:40:31 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
+	* htdoc/htfuzzy: Added blurb on accents algorithm, taken from 3.2.0b4.
 	* htdoc/attrs.html, htdoc/cf_by{name,prog}.html: Added entry for
 	accents_db attribute for htfuzzy and htsearch. Mentioned accents
 	algorithm in description of search_algorithm. Noted effect of
